--- a/docker/frontend/vhost.conf
+++ b/docker/frontend/vhost.conf
@@ -3,16 +3,12 @@ server {
   server_name  localhost;
   client_max_body_size 100m;
 
-  location /resources/ {
-    root /app;
-    }
-
   location / {
-    root /app;
-    fastcgi_index Api.php;
+    root /app/public;
+    fastcgi_index index.php;
     include fastcgi_params;
     fastcgi_pass   arkonit_backend:9000;
-    fastcgi_param  SCRIPT_FILENAME /app/Api.php;
+    fastcgi_param  SCRIPT_FILENAME /app/public/index.php;
     fastcgi_read_timeout 300;
   }
 
